# genome2tx

./: .gitignore  README.md  setup.cfg
genome2tx/: main.py
test/data/: Aligned.sortedByCoord.out.bam  Aligned.sortedByCoord.out.bam.bai  Aligned.sortedByCoord.out.bed  Aligned.sortedByCoord.out.sam  Aligned.toTranscriptome.out.sorted.bam.bai
tests/: test_main.py
