[metadata]
name = genome2tx 
version = 0.1.0
description = Genome to transcript
long_description = Convert from genome coordinates to transcript coordinates
author = yh549848

[options]
install_requires =
   docopt
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    genome2tx = genome2tx.main:main
